# camera-scanner

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_Development.md  build-opencv.sh  camerascanner.desktop.in  clickable.json  manifest.json.in
plugins/: CMakeLists.txt
plugins/ImageProcessing/: AbstractDocumentExtractor.h  CDocument.cpp  CDocument.h  CMakeLists.txt  Debugger.h  Document.cpp  Document.h  DocumentStore.cpp  DocumentStore.h  ExtractorConfig.cpp  ExtractorConfig.h  ImageProcessing.cpp  ImageProcessing.h  ONSExtractor.cpp  ONSExtractor.h  imageprocessing.cpp  imageprocessing.h  plugin.cpp  plugin.h  qmldir
plugins/ImageProcessing/Test/: CMakeLists.txt  Test.cpp
po/: camerascanner.jonius.pot
qml/: ImportPage.qml  InfoPage.qml  Main.qml  SettingsPage.qml
qml/components/: CommonHeader.qml  ContentShareDialog.qml  DeleteAllImgDialog.qml  EmptyDocument.qml  EmptyState.qml  MainPage.qml  SettingsListItem.qml  SingleImageHeader.qml
qml/single-image/: SingleImage.qml
